Correctly handle partial trees and nested artifacts in the prefetcher.
Due to the existence of partial trees (tree artifacts whose files are not all
produced by the same action) and nested artifacts (artifacts whose output path
is a strict prefix of another artifact's), the prefetcher must not assume every
tree artifact is fetched as a whole. In addition, concurrent actions calling
the prefetcher might write to the same directory in the output tree, so they
must synchronize when making the directory temporarily writable.

Fixes #16333.